# yocaml_blog

./: .gitignore  dune-project  joy_blog.opam  readme.md  test_zarith  test_zarith.cmi  test_zarith.cmx  test_zarith.ml
.github/workflows/: deploy.yml
assets/templates/: article.html  index.html  layout.html
content/: index.md
content/articles/: my-first-article.md  understanding-paths-in-yocaml.md
content/pages/: about.md  contact.md
